feat(jpa): add jpa
Introduce JPA aggregate Product